stuf/src/p3/tests/t072.err
Semantic error on line 1: Invalid right operand for operator '!'.
Semantic error on line 2: Invalid right operand for operator '!'.
Semantic error on line 3: Invalid right operand for operator '!'.
