stuf/src/p3/tests/t072.gpl
int c = !"bobbing";
double f = !"bobbing";
string i = !"bobbing";
